
 * Modified AbstractSQLWriter to allow (and by default use) quoting of table names and
   column identifiers. This is necessary where reserved words are used for table and
   column names. Thanks to Tim (ttrantx) for identifying this.
 
 * Tibco read connector has been rewritten completely. Existing adaptors which use it 
   may need slight reconfiguration.
   
Processors
==========

Examples
========
 
 * Registration server (example\spring\register\oa-register-server.xml) now 
   based on CXF instead of XFire.  
   
 * (SC93) example/spring/connectors/soap/ws-cxf-reader.xml - type of serviceName
   property changed to QName.
   
 * (SC95) New example that demonstrates use of message history
   (example\spring\adaptor\history.xml).    

Miscellaneous
=============

 * (SC94) Resetting exitCode in ReadNode (affects use with AdaptorRunConfiguration).  
 
 * (SC95) Support for Message History. More information at http://www.openadaptor.org/history.html 
 
 * (SC96) Quoting issue in AbstractSQLWriter (see above)
          Note that this also required upgrading of mysql driver as older version did not
          appear to properly support quoting in prepared statements.
 
 * (SC97) Bug where debug logging combined with older Sybase driver might cause an
          AbstractMethodError.
          
 * (SC98) Including message metadata in exception handling (ongoing).  
 
 * (SC99) Added packageName property to facilitate Oracle Package names in stored proc
          definitions.       

Bug Fixes
=========

3rd Party
=========

 * Upgraded: lib/cxf_2.1.jar to 2.2.3
             lib/XmlSchema_1.4.2.jar to 1.4.5 (CXF related)
             lib/FastInfoset_1.2.2 to 1.2.7 (CXF related)
             lib/jaxb-impl_2.1.6.jar to 2.1.12 (CXF related)
             lib/jaxb-xjc_2.1.6.jar to 2.1.12 (CXF related)
             lib/mysql-connector-java-5.1.10-bin-jar (from mysql-connector-java-5.0.6-bin-jar)
             

=================================================